2008-08-01  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chfn.c, src/chsh.c, src/groupdel.c, src/groupmems.c,
	src/groupmod.c, src/grpck.c, src/login.c, src/logoutd.c,
	src/newgrp.c, src/newusers.c, src/passwd.c, src/pwck.c,
	src/suauth.c, src/useradd.c, src/userdel.c, src/usermod.c,
	src/vipw.c: Complete the switch from the `' quotation style to ''.
	Do it also in SYSLOG messages. Quote some parameters. All this
	permits to merge some messages.

2008-07-30  Lukáš Kuklínek  <lkukline@redhat.com>

	* src/groupmems.c: Only check if the adduser user exists when an
	user is specified with -a.

2008-07-30  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Fix the groupmems' usage message. The -D option
	is in fact -p.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Replace an if test by an else.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Ignore the return value of fputs().

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c (whoami): Make sure usr and grp are not NULL
	before dereferencing them.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Use xstrdup() rather than strdup().

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Add parenthesis.
	* src/groupmems.c: Avoid implicit conversion of pointers / chars to
	booleans.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/groupmems.c: Allow everybody to list the users of a group.
	This information is publicly available in /etc/group.
	* NEWS, src/groupmems.c: Open /etc/group read only for the -l option.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* man/groupmems.8.xml: Sort options alphabetically.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c (check_perms): Simplify. Always call pam_end()